{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 2,
  "lineage": "ce12dead-835c-252f-e4d1-5de07ca843b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-01006be6e089a219b",
            "default_route_table_id": "rtb-01006be6e089a219b",
            "id": "rtb-01006be6e089a219b",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jjay-terraform-Default-RT"
            },
            "tags_all": {
              "Name": "jjay-terraform-Default-RT",
              "env": "jjay-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-051585b9733697bae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bc23e91184de8d6",
            "association_id": "eipassoc-0d577ec9291880917",
            "domain": "vpc",
            "id": "eipalloc-00bc23e91184de8d6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-007e8e25cb7dbbb93",
            "private_dns": "ip-10-0-0-25.ec2.internal",
            "private_ip": "10.0.0.25",
            "public_dns": "ec2-3-94-30-63.compute-1.amazonaws.com",
            "public_ip": "3.94.30.63",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "jjay-terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0371b109d7dd25e54",
            "arn": "arn:aws:ec2:us-east-1:797918408294:instance/i-01f55ad2fc113cc04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f55ad2fc113cc04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jjay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06dababb89e2ca13a",
            "private_dns": "ip-10-0-0-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.101",
            "public_dns": "ec2-23-23-15-124.compute-1.amazonaws.com",
            "public_ip": "23.23.15.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0734d4f4a17c5f046",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069770169b1bbe2e7",
            "tags": {
              "Name": "jjay-terraform-EC2"
            },
            "tags_all": {
              "Name": "jjay-terraform-EC2",
              "env": "jjay-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad8bff02b80fbd65"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:internet-gateway/igw-06573b022a6f6747f",
            "id": "igw-06573b022a6f6747f",
            "owner_id": "797918408294",
            "tags": {
              "Name": "jjay-terraform-IGW"
            },
            "tags_all": {
              "Name": "jjay-terraform-IGW",
              "env": "jjay-terraform"
            },
            "vpc_id": "vpc-051585b9733697bae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05337d4e2a91e78b2",
            "original_route_table_id": "rtb-01006be6e089a219b",
            "route_table_id": "rtb-01006be6e089a219b",
            "vpc_id": "vpc-051585b9733697bae"
          },
          "dependencies": [
            "aws_default_route_table.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bc23e91184de8d6",
            "connectivity_type": "public",
            "id": "nat-009653de35846955f",
            "network_interface_id": "eni-007e8e25cb7dbbb93",
            "private_ip": "10.0.0.25",
            "public_ip": "3.94.30.63",
            "subnet_id": "subnet-069770169b1bbe2e7",
            "tags": {
              "Name": "jjay-terraform-NGW"
            },
            "tags_all": {
              "Name": "jjay-terraform-NGW",
              "env": "jjay-terraform"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085b69f419c2d4f491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-009653de35846955f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085b69f419c2d4f49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main_nat",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06573b022a6f6747f",
            "id": "r-rtb-01f94c5eb000d57b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f94c5eb000d57b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-085b69f419c2d4f49",
            "id": "rtb-085b69f419c2d4f49",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009653de35846955f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jjay-terraform-Private-RT"
            },
            "tags_all": {
              "Name": "jjay-terraform-Private-RT",
              "env": "jjay-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-051585b9733697bae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-01f94c5eb000d57b9",
            "id": "rtb-01f94c5eb000d57b9",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06573b022a6f6747f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jjay-terraform-Public-RT"
            },
            "tags_all": {
              "Name": "jjay-terraform-Public-RT",
              "env": "jjay-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-051585b9733697bae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cd1964182fec3cf",
            "route_table_id": "rtb-085b69f419c2d4f49",
            "subnet_id": "subnet-0d4389a30a7c6fa2b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0578b31b054099aa4",
            "route_table_id": "rtb-085b69f419c2d4f49",
            "subnet_id": "subnet-0ea7bb4d3b3504326"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069feed000beed78d",
            "route_table_id": "rtb-01f94c5eb000d57b9",
            "subnet_id": "subnet-069770169b1bbe2e7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039e5e7019d040f4b",
            "route_table_id": "rtb-01f94c5eb000d57b9",
            "subnet_id": "subnet-0fcda065132292672"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0d4389a30a7c6fa2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4389a30a7c6fa2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jjay-terraform-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "jjay-terraform-Private-Subnet-us-east-1a",
              "env": "jjay-terraform"
            },
            "vpc_id": "vpc-051585b9733697bae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0ea7bb4d3b3504326",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea7bb4d3b3504326",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jjay-terraform-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "jjay-terraform-Private-Subnet-us-east-1b",
              "env": "jjay-terraform"
            },
            "vpc_id": "vpc-051585b9733697bae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-069770169b1bbe2e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069770169b1bbe2e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jjay-terraform-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "jjay-terraform-Public-Subnet-us-east-1a",
              "env": "jjay-terraform"
            },
            "vpc_id": "vpc-051585b9733697bae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0fcda065132292672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcda065132292672",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jjay-terraform-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "jjay-terraform-Public-Subnet-us-east-1b",
              "env": "jjay-terraform"
            },
            "vpc_id": "vpc-051585b9733697bae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:vpc/vpc-051585b9733697bae",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0adf5180e964c864b",
            "default_route_table_id": "rtb-01006be6e089a219b",
            "default_security_group_id": "sg-0ad8bff02b80fbd65",
            "dhcp_options_id": "dopt-0b0655287249fb28a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051585b9733697bae",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b79406aaa7ad42f4",
            "ipv6_cidr_block": "2600:1f18:2095:f700::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01006be6e089a219b",
            "owner_id": "797918408294",
            "tags": {
              "Name": "jjay-terraform-VPC"
            },
            "tags_all": {
              "Name": "jjay-terraform-VPC",
              "env": "jjay-terraform"
            }
          }
        }
      ]
    }
  ]
}